# crater-id

./: .gitignore  README.md  meson.build
examples/: main.cpp  meson.build
include/: camera.h  combinatorics.h  conics.h  crater-id.h  io.h  math_utils.h  meson.build  navigation.h  quadrics.h  structs.h  vector_math.h  visuals.h
src/: camera.cpp  combinatorics.cpp  conics.cpp  crater-id.cpp  io.cpp  main.cpp  math_utils.cpp  meson.build  navigation.cpp  quadrics.cpp  vector_math.cpp  visuals.cpp
test/: cidtest.cpp  meson.build  test_camera.cpp  test_combinatorics.cpp  test_conics.cpp  test_invariants.cpp  test_io.cpp  test_math.cpp  test_nav.cpp  test_quadrics.cpp
